--- a/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/HeaderSettingsTableViewCell.xib
@@ -28,12 +28,12 @@
                                 </constraints>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZFB-qA-jDg">
-                                <rect key="frame" x="35" y="133" width="20" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="9WN-nj-9DP"/>
-                                    <constraint firstAttribute="width" constant="20" id="U8K-31-26I"/>
-                                </constraints>
-                                <state key="normal" title="edit" image="editBtn"/>
+                                <rect key="frame" x="35" y="135" width="58" height="25"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <state key="normal" title="  edit" image="editBtn"/>
+                                <connections>
+                                    <action selector="editButtonTapped:" destination="qpw-P1-R1X" eventType="touchUpInside" id="zL4-LB-764"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="KYg-vH-o0I">
                                 <rect key="frame" x="197" y="35" width="110" height="48"/>
@@ -56,19 +56,6 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uuC-MB-f5g">
-                                <rect key="frame" x="35" y="133" width="98" height="20"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="98" id="7fY-kz-O2f"/>
-                                    <constraint firstAttribute="height" constant="20" id="sUH-Nt-1wE"/>
-                                </constraints>
-                                <state key="normal" title="edit">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                </state>
-                                <connections>
-                                    <action selector="editButtonTapped:" destination="qpw-P1-R1X" eventType="touchUpInside" id="U7e-ht-kPh"/>
-                                </connections>
-                            </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jo9-vc-nHw">
                                 <rect key="frame" x="8" y="8" width="48" height="18"/>
                                 <constraints>
@@ -80,7 +67,7 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="backBattonTaped:" destination="qpw-P1-R1X" eventType="touchUpInside" id="bza-R3-ZUs"/>
+                                    <action selector="backBattonTapped:" destination="qpw-P1-R1X" eventType="touchUpInside" id="1eq-Tt-B12"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -89,14 +76,12 @@
                             <constraint firstAttribute="trailing" secondItem="KYg-vH-o0I" secondAttribute="trailing" constant="68" id="3V1-Bw-zxt"/>
                             <constraint firstItem="i3H-IY-XyA" firstAttribute="leading" secondItem="xd5-AK-fV5" secondAttribute="leading" constant="35" id="6fd-yH-C8n"/>
                             <constraint firstItem="ZFB-qA-jDg" firstAttribute="leading" secondItem="xd5-AK-fV5" secondAttribute="leading" constant="35" id="Fhw-dr-HK7"/>
-                            <constraint firstAttribute="bottom" secondItem="ZFB-qA-jDg" secondAttribute="bottom" constant="31" id="X0O-wb-euF"/>
+                            <constraint firstAttribute="bottom" secondItem="ZFB-qA-jDg" secondAttribute="bottom" constant="24" id="X0O-wb-euF"/>
                             <constraint firstItem="KYg-vH-o0I" firstAttribute="top" secondItem="xd5-AK-fV5" secondAttribute="top" constant="35" id="Y1J-wP-gkb"/>
-                            <constraint firstAttribute="bottom" secondItem="uuC-MB-f5g" secondAttribute="bottom" constant="31" id="YaG-ie-nBn"/>
                             <constraint firstItem="Jo9-vc-nHw" firstAttribute="leading" secondItem="xd5-AK-fV5" secondAttribute="leading" constant="8" id="c3b-uL-YGV"/>
                             <constraint firstItem="Jo9-vc-nHw" firstAttribute="top" secondItem="xd5-AK-fV5" secondAttribute="top" constant="8" id="ruS-hU-mx3"/>
                             <constraint firstAttribute="bottom" secondItem="hIR-Sc-RFl" secondAttribute="bottom" constant="40" id="utW-rs-Rhd"/>
                             <constraint firstAttribute="trailing" secondItem="hIR-Sc-RFl" secondAttribute="trailing" constant="24" id="wc1-6F-bdA"/>
-                            <constraint firstItem="uuC-MB-f5g" firstAttribute="leading" secondItem="xd5-AK-fV5" secondAttribute="leading" constant="35" id="xz6-kr-s4H"/>
                             <constraint firstItem="i3H-IY-XyA" firstAttribute="top" secondItem="xd5-AK-fV5" secondAttribute="top" constant="35" id="ynp-ac-rQe"/>
                         </constraints>
                     </view>
@@ -111,7 +96,7 @@
             <viewLayoutGuide key="safeArea" id="QhA-H7-DCU"/>
             <connections>
                 <outlet property="avatarView" destination="i3H-IY-XyA" id="532-sE-tVp"/>
-                <outlet property="editButton" destination="uuC-MB-f5g" id="GZY-nd-DkL"/>
+                <outlet property="editButton" destination="ZFB-qA-jDg" id="nJ8-7N-fIw"/>
                 <outlet property="mainView" destination="xd5-AK-fV5" id="YcO-Bm-33a"/>
                 <outlet property="nameLabel" destination="KYg-vH-o0I" id="nNH-Wo-UjJ"/>
                 <outlet property="specializationLabel" destination="hIR-Sc-RFl" id="zkg-01-TMP"/>
