--- a/INTITA/Modules/ProfileSettings/Cells/InfoSettingProfileTableViewCell.xib
+++ b/INTITA/Modules/ProfileSettings/Cells/InfoSettingProfileTableViewCell.xib
@@ -9,62 +9,73 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="InfoSettingProfileTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="105" id="KGk-i7-Jjw" customClass="InfoSettingProfileTableViewCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="45"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="105"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="kY0-Fr-4Ly">
-                        <rect key="frame" x="28" y="4" width="343" height="34"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4He-Dk-BPq">
+                        <rect key="frame" x="28" y="12" width="41.5" height="81"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="DFo-dt-Whx">
+                        <rect key="frame" x="85.5" y="4" width="261.5" height="97"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4He-Dk-BPq">
-                                <rect key="frame" x="0.0" y="0.0" width="71" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="20" id="0xU-1t-4Fd"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Y2P-yl-2AN">
-                                <rect key="frame" x="79" y="0.0" width="240" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" relation="lessThanOrEqual" constant="240" id="dJa-de-bvl"/>
-                                </constraints>
+                                <rect key="frame" x="0.0" y="0.0" width="261.5" height="68"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9x-Ev-ToC">
-                                <rect key="frame" x="327" y="0.0" width="16" height="34"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="16" id="0fH-Nu-yi6"/>
-                                </constraints>
-                                <state key="normal" image="skipArrow"/>
-                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="dsa-Fu-TQj">
+                                <rect key="frame" x="0.0" y="68" width="261.5" height="29"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d9x-Ev-ToC">
+                                        <rect key="frame" x="0.0" y="0.0" width="244" height="29"/>
+                                        <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="14"/>
+                                        <state key="normal" title="button">
+                                            <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="zC0-gS-aVG">
+                                        <rect key="frame" x="252" y="0.0" width="9.5" height="29"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <state key="normal" image="skipArrow"/>
+                                    </button>
+                                </subviews>
+                            </stackView>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="trailing" secondItem="d9x-Ev-ToC" secondAttribute="trailing" id="ESF-Lz-gHI"/>
-                            <constraint firstItem="d9x-Ev-ToC" firstAttribute="leading" secondItem="Y2P-yl-2AN" secondAttribute="trailing" constant="8" symbolic="YES" id="Td9-F9-vgE"/>
+                            <constraint firstItem="Y2P-yl-2AN" firstAttribute="leading" secondItem="DFo-dt-Whx" secondAttribute="leading" id="8u6-IT-fgs"/>
+                            <constraint firstAttribute="trailing" secondItem="Y2P-yl-2AN" secondAttribute="trailing" id="ErX-8P-A6c"/>
+                            <constraint firstAttribute="trailing" secondItem="dsa-Fu-TQj" secondAttribute="trailing" id="nJ7-bf-pq6"/>
+                            <constraint firstItem="dsa-Fu-TQj" firstAttribute="leading" secondItem="DFo-dt-Whx" secondAttribute="leading" id="xFP-uO-FNx"/>
                         </constraints>
                     </stackView>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="kY0-Fr-4Ly" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="1QC-Yg-ZSj"/>
-                    <constraint firstAttribute="trailing" secondItem="kY0-Fr-4Ly" secondAttribute="trailing" constant="4" id="KDf-HT-ctd"/>
-                    <constraint firstItem="kY0-Fr-4Ly" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="Uhy-x3-eRv"/>
-                    <constraint firstAttribute="bottom" secondItem="kY0-Fr-4Ly" secondAttribute="bottom" constant="4" id="g6t-k0-gyf"/>
+                    <constraint firstItem="DFo-dt-Whx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="4" id="1OF-pB-zfJ"/>
+                    <constraint firstItem="4He-Dk-BPq" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="8wS-dD-K83"/>
+                    <constraint firstItem="DFo-dt-Whx" firstAttribute="leading" secondItem="4He-Dk-BPq" secondAttribute="trailing" constant="16" id="Lfa-11-9Ci"/>
+                    <constraint firstAttribute="trailing" secondItem="DFo-dt-Whx" secondAttribute="trailing" constant="28" id="N2e-pd-n1K"/>
+                    <constraint firstAttribute="bottom" secondItem="DFo-dt-Whx" secondAttribute="bottom" constant="4" id="OGf-FY-WG9"/>
+                    <constraint firstItem="4He-Dk-BPq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="TGU-4u-pAz"/>
+                    <constraint firstAttribute="bottom" secondItem="4He-Dk-BPq" secondAttribute="bottom" constant="12" id="nA2-4T-mVX"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="cellView" destination="H2p-sc-9uM" id="xII-7X-F34"/>
+                <outlet property="countryButton" destination="d9x-Ev-ToC" id="I1y-D8-39l"/>
                 <outlet property="infoTextField" destination="Y2P-yl-2AN" id="tAn-6r-4Ri"/>
-                <outlet property="rightButton" destination="d9x-Ev-ToC" id="dTx-Th-SRF"/>
+                <outlet property="rightButton" destination="zC0-gS-aVG" id="HjA-f4-rBO"/>
+                <outlet property="stackView" destination="dsa-Fu-TQj" id="IhD-5W-rCc"/>
                 <outlet property="titleLabel" destination="4He-Dk-BPq" id="MMd-Rd-nd7"/>
             </connections>
-            <point key="canvasLocation" x="10" y="88"/>
+            <point key="canvasLocation" x="9.4202898550724647" y="107.47767857142857"/>
         </tableViewCell>
     </objects>
     <resources>
