--- a/INTITA/Common/BirthdayScreen/Birthday.storyboard
+++ b/INTITA/Common/BirthdayScreen/Birthday.storyboard
@@ -15,9 +15,59 @@
                     <view key="view" contentMode="scaleToFill" id="JR2-Og-pS5">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="N9U-HI-cOg">
+                                <rect key="frame" x="0.0" y="190" width="414" height="216"/>
+                            </datePicker>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Birth selector" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F28-IV-f29">
+                                <rect key="frame" x="28" y="52" width="358" height="32"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="32" id="x4c-ZT-via"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="27"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O1V-DA-YW6">
+                                <rect key="frame" x="266" y="774" width="120" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="120" id="NBj-zS-NHe"/>
+                                    <constraint firstAttribute="height" constant="40" id="Nmv-iv-nbl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
+                                <state key="normal" title="Done"/>
+                                <connections>
+                                    <action selector="doneButtonTapped:" destination="O82-RC-vw9" eventType="touchUpInside" id="Jc2-ZG-bLM"/>
+                                </connections>
+                            </button>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kMI-Fz-Shf">
+                                <rect key="frame" x="28" y="108" width="358" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="V2g-p9-Xgz"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="N9U-HI-cOg" firstAttribute="top" secondItem="kMI-Fz-Shf" secondAttribute="bottom" constant="48" id="6MI-Lg-tYT"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="N9U-HI-cOg" secondAttribute="trailing" id="8XL-rr-DwE"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="F28-IV-f29" secondAttribute="trailing" constant="28" id="BqI-Tb-D0F"/>
+                            <constraint firstItem="F28-IV-f29" firstAttribute="leading" secondItem="V2g-p9-Xgz" secondAttribute="leading" constant="28" id="Nkf-IR-NWz"/>
+                            <constraint firstItem="N9U-HI-cOg" firstAttribute="leading" secondItem="JR2-Og-pS5" secondAttribute="leading" id="QhB-NJ-Zsx"/>
+                            <constraint firstItem="F28-IV-f29" firstAttribute="top" secondItem="V2g-p9-Xgz" secondAttribute="top" constant="8" id="SHM-fw-IwY"/>
+                            <constraint firstItem="kMI-Fz-Shf" firstAttribute="leading" secondItem="V2g-p9-Xgz" secondAttribute="leading" constant="28" id="U4k-uQ-NB7"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="kMI-Fz-Shf" secondAttribute="trailing" constant="28" id="b5T-4Y-wbX"/>
+                            <constraint firstItem="kMI-Fz-Shf" firstAttribute="top" secondItem="F28-IV-f29" secondAttribute="bottom" constant="24" id="sk8-wg-FN4"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="trailing" secondItem="O1V-DA-YW6" secondAttribute="trailing" constant="28" id="yBu-TZ-tJW"/>
+                            <constraint firstItem="V2g-p9-Xgz" firstAttribute="bottom" secondItem="O1V-DA-YW6" secondAttribute="bottom" constant="48" id="zwp-oc-oWm"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="datePicker" destination="N9U-HI-cOg" id="xwL-Cj-UQn"/>
+                        <outlet property="dateTextField" destination="kMI-Fz-Shf" id="G4W-Uj-rLG"/>
+                        <outlet property="doneButton" destination="O1V-DA-YW6" id="Ik2-rg-CFf"/>
+                        <outlet property="nameScreenLabel" destination="F28-IV-f29" id="Bjs-by-5Th"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="xGT-74-eLs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
