--- a/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
+++ b/INTITA/Modules/ForgotPassword/ForgotPassword.storyboard
@@ -21,8 +21,8 @@
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <sections/>
                             </tableView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qL3-h3-lL7">
-                                <rect key="frame" x="24" y="52" width="48" height="22"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qL3-h3-lL7">
+                                <rect key="frame" x="28" y="52" width="48" height="22"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="48" id="3v7-xS-rfv"/>
                                 </constraints>
@@ -36,7 +36,7 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="eSg-FT-avf" firstAttribute="trailing" secondItem="X9T-Ud-TdW" secondAttribute="trailing" id="GQX-mS-cDk"/>
-                            <constraint firstItem="qL3-h3-lL7" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="24" id="Yr4-GP-rgk"/>
+                            <constraint firstItem="qL3-h3-lL7" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" constant="28" id="Yr4-GP-rgk"/>
                             <constraint firstItem="X9T-Ud-TdW" firstAttribute="leading" secondItem="eSg-FT-avf" secondAttribute="leading" id="Yv7-As-Ksj"/>
                             <constraint firstItem="qL3-h3-lL7" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" constant="8" id="bNj-VF-6PY"/>
                             <constraint firstItem="X9T-Ud-TdW" firstAttribute="top" secondItem="eSg-FT-avf" secondAttribute="top" constant="45" id="kKH-05-zJV"/>
