--- a/INTITA/Modules/ForgotPassword/ForgotCells/ExplanationTableViewCell.xib
+++ b/INTITA/Modules/ForgotPassword/ForgotCells/ExplanationTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExplanationTableViewCell" rowHeight="114" id="KGk-i7-Jjw" customClass="ExplanationTableViewCell" customModule="INTITA" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExplanationTableViewCell" id="KGk-i7-Jjw" customClass="ExplanationTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="154"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Bk-OC-7jf">
-                        <rect key="frame" x="28" y="40" width="319" height="114"/>
+                        <rect key="frame" x="28" y="40" width="319" height="58"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -27,7 +27,7 @@
                     <constraint firstItem="8Bk-OC-7jf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="F3U-9V-XKz"/>
                     <constraint firstItem="8Bk-OC-7jf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="PTB-JA-rEM"/>
                     <constraint firstAttribute="trailing" secondItem="8Bk-OC-7jf" secondAttribute="trailing" constant="28" id="XEU-I1-av2"/>
-                    <constraint firstAttribute="bottom" secondItem="8Bk-OC-7jf" secondAttribute="bottom" id="t4C-QX-jze"/>
+                    <constraint firstAttribute="bottom" secondItem="8Bk-OC-7jf" secondAttribute="bottom" constant="56" id="t4C-QX-jze"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
