--- a/INTITA/Modules/LogInScreen/LogInCells/LinksTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/LinksTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="LinksTableViewCell" customModule="INTITA" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="LinksTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="40"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -50,8 +50,10 @@
                     </button>
                 </subviews>
                 <constraints>
+                    <constraint firstItem="GOv-2X-qzb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="3" id="2ZX-kN-vNm"/>
                     <constraint firstItem="GOv-2X-qzb" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="3pc-DI-Al4"/>
                     <constraint firstItem="GOv-2X-qzb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="8Pg-CO-jCt"/>
+                    <constraint firstAttribute="bottom" secondItem="GOv-2X-qzb" secondAttribute="bottom" constant="3" id="CCb-hW-i3A"/>
                     <constraint firstAttribute="trailing" secondItem="jsc-EJ-KZk" secondAttribute="trailing" constant="28" id="FDE-3a-hCA"/>
                     <constraint firstItem="jsc-EJ-KZk" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="Noj-Bt-Hhx"/>
                 </constraints>
