--- a/INTITA/Modules/LogInScreen/LogInCells/RegisterButtonTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/RegisterButtonTableViewCell.xib
@@ -10,11 +10,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="104" id="KGk-i7-Jjw" customClass="RegisterButtonTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RegisterButtonTableViewCell" customModule="INTITA" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5nh-iM-lxR">
@@ -36,13 +36,14 @@
                     <constraint firstItem="5nh-iM-lxR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="GxE-l2-JH5"/>
                     <constraint firstItem="5nh-iM-lxR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="Kv8-36-8sF"/>
                     <constraint firstItem="5nh-iM-lxR" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Wln-LD-9mw"/>
+                    <constraint firstAttribute="bottom" secondItem="5nh-iM-lxR" secondAttribute="bottom" constant="28" id="dIZ-Fj-zFv"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="logInButton" destination="5nh-iM-lxR" id="YBw-9P-otv"/>
             </connections>
-            <point key="canvasLocation" x="78.260869565217391" y="113.83928571428571"/>
+            <point key="canvasLocation" x="77.536231884057983" y="122.54464285714285"/>
         </tableViewCell>
     </objects>
     <resources>
