--- a/INTITA/Modules/ForgotPassword/ForgotCells/ExplanationTableViewCell.xib
+++ b/INTITA/Modules/ForgotPassword/ForgotCells/ExplanationTableViewCell.xib
@@ -4,37 +4,56 @@
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="ExplanationTableViewCell" id="KGk-i7-Jjw" customClass="ExplanationTableViewCell" customModule="INTITA" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="154"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="163"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="154"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="163"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Bk-OC-7jf">
-                        <rect key="frame" x="28" y="40" width="319" height="58"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="feT-Nf-dxb">
+                        <rect key="frame" x="28" y="40" width="319" height="112"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Label" textAlignment="justified" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8Bk-OC-7jf">
+                                <rect key="frame" x="0.0" y="0.0" width="319" height="19.5"/>
+                                <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="16"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="8Bk-OC-7jf" firstAttribute="top" secondItem="feT-Nf-dxb" secondAttribute="top" id="9hZ-od-hB5"/>
+                            <constraint firstAttribute="height" constant="112" id="F0y-vH-LrO"/>
+                            <constraint firstAttribute="trailing" secondItem="8Bk-OC-7jf" secondAttribute="trailing" id="FeM-As-bMF"/>
+                            <constraint firstItem="8Bk-OC-7jf" firstAttribute="leading" secondItem="feT-Nf-dxb" secondAttribute="leading" id="Nh1-B2-SfD"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="8Bk-OC-7jf" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="F3U-9V-XKz"/>
-                    <constraint firstItem="8Bk-OC-7jf" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="PTB-JA-rEM"/>
-                    <constraint firstAttribute="trailing" secondItem="8Bk-OC-7jf" secondAttribute="trailing" constant="28" id="XEU-I1-av2"/>
-                    <constraint firstAttribute="bottom" secondItem="8Bk-OC-7jf" secondAttribute="bottom" constant="56" id="t4C-QX-jze"/>
+                    <constraint firstAttribute="trailing" secondItem="feT-Nf-dxb" secondAttribute="trailing" constant="28" id="J4V-7O-siy"/>
+                    <constraint firstItem="feT-Nf-dxb" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="cNO-wW-f5R"/>
+                    <constraint firstAttribute="bottom" secondItem="feT-Nf-dxb" secondAttribute="bottom" id="fVZ-g7-FtQ"/>
+                    <constraint firstItem="feT-Nf-dxb" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="40" id="iAg-GR-Tzs"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="explanationLabel" destination="8Bk-OC-7jf" id="xci-J2-bM3"/>
             </connections>
-            <point key="canvasLocation" x="-196" y="54"/>
+            <point key="canvasLocation" x="-196.37681159420291" y="69.977678571428569"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
