--- a/INTITA/Modules/LogInScreen/LogInCells/RegisterButtonTableViewCell.xib
+++ b/INTITA/Modules/LogInScreen/LogInCells/RegisterButtonTableViewCell.xib
@@ -13,12 +13,12 @@
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="RegisterButtonTableViewCell" customModule="INTITA" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
                 <rect key="frame" x="0.0" y="0.0" width="375" height="104"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5nh-iM-lxR">
-                        <rect key="frame" x="28" y="21" width="319" height="55"/>
+                        <rect key="frame" x="28" y="16" width="319" height="55"/>
                         <color key="backgroundColor" name="mainColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="55" id="RTY-6I-Pkd"/>
@@ -33,7 +33,7 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="5nh-iM-lxR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="21" id="GxE-l2-JH5"/>
+                    <constraint firstItem="5nh-iM-lxR" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="GxE-l2-JH5"/>
                     <constraint firstItem="5nh-iM-lxR" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="28" id="Kv8-36-8sF"/>
                     <constraint firstItem="5nh-iM-lxR" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" id="Wln-LD-9mw"/>
                     <constraint firstAttribute="bottom" secondItem="5nh-iM-lxR" secondAttribute="bottom" constant="28" id="dIZ-Fj-zFv"/>
